add ConfirmDialog component and update dialog interactions in various pages

--- a/Stocky.Client/Components/DialogWindows/OrderDialogs/CreateOrderDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/OrderDialogs/CreateOrderDialog.razor
@@ -19,10 +19,10 @@
 
     [Parameter] public int UserId { get; set; }
     [Parameter] public double TotalAmount { get; set; }
-    [Parameter] public string ContentText { get; set; }
+    [Parameter] public string? ContentText { get; set; }
     [Parameter] public string ButtonText { get; set; } = "Создать";
     [Parameter] public Color Color { get; set; } = Color.Default;
-    private string ApiBaseUrl => Configuration["ApiBaseUrl"];
+    private string? ApiBaseUrl => Configuration["ApiBaseUrl"];
 
     protected override void OnParametersSet()
     {
