refactor: improve ConfirmDialog key handling and enhance product status management in order and pocket item handlers

--- a/Stocky.Client/Components/DialogWindows/ConfirmDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/ConfirmDialog.razor
@@ -17,7 +17,7 @@
 
     private void OnKeyDown(KeyboardEventArgs args)
     {
-        if (args.Key == "Enter" || args.Key == "NumpadEnter")
+        if (args.Key is "Enter" or "NumpadEnter")
         {
             Confirm();
         }
