refactor: rename dialog components for clarity and improve user interaction handling

--- a/Stocky.Client/Components/DialogWindows/LogOutConfirmDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/LogOutConfirmDialog.razor
@@ -14,7 +14,7 @@
 
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
-    [Parameter] public string ContentText { get; set; } = "Продукт не добавлен в базу данных. Хотите добавить?";
+    [Parameter] public string ContentText { get; set; } = "do you want to log out?";
 
     private async Task Confirm()
     {
