--- a/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
@@ -21,7 +21,7 @@
     [Parameter] public string ContentText { get; set; } = "Вы уверены?";
     [Parameter] public string ButtonText { get; set; } = "ОК";
     [Parameter] public Color Color { get; set; } = Color.Primary;
-    private string ApiBaseUrl => Configuration["ApiBaseUrl"];
+    private string? ApiBaseUrl => Configuration["ApiBaseUrl"];
 
     private bool _isLoading;
     private void Cancel() => MudDialog.Cancel();
