--- a/Stocky.Client/Components/DialogWindows/UserDialogs/EditUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/EditUserDialog.razor
@@ -8,7 +8,7 @@
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
     [Parameter] public User UserModel { get; set; } = new();
-    private string ApiBaseUrl => Configuration["ApiBaseUrl"];
+    private string? ApiBaseUrl => Configuration["ApiBaseUrl"];
 
     private async Task Submit()
     {
