--- a/Stocky.Client/Components/Layout/NavMenu.razor
+++ b/Stocky.Client/Components/Layout/NavMenu.razor
@@ -50,7 +50,7 @@
 
     private async Task Logout()
     {
-        await DialogService.ShowAsync<ConfirmDialog1>("Создать заказ");
+        await DialogService.ShowAsync<LogOutConfirmDialog>("Создать заказ");
     }
 
 }
