refactor: update authentication handling and improve user login experience

--- a/Stocky.Client/Components/DialogWindows/LogOutConfirmDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/LogOutConfirmDialog.razor
@@ -14,7 +14,7 @@
 
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
-    [Parameter] public string ContentText { get; set; } = "do you want to log out?";
+    [Parameter] public string ContentText { get; set; } = "Вы уверены, что хотите выйти?";
 
     private async Task Confirm()
     {
