--- a/Stocky.Client/Components/Pages/UserPage.razor
+++ b/Stocky.Client/Components/Pages/UserPage.razor
@@ -267,7 +267,7 @@ else
         var parameters = new DialogParameters { { "UserModel", new User() } };
         var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Small, FullWidth = true };
 
-        var dialog = await DialogService.ShowAsync<CreateUserDialog>("Создать пользователя", parameters, options);
+        var dialog = await DialogService.ShowAsync<CreateUserDialog>("Создать нового пользователя", parameters, options);
         var result = await dialog.Result;
 
         if (result is { Canceled: false })
